@@ -2043,3 +2043,6 @@ RIS=RIS
 Assign_exclusively_to_group=Assign_exclusively_to_group
 
 Bad_Request_'%0'.=Bad_Request_'%0'.
+
+Mark_entries_imported_into_an_existing_database=Mark_entries_imported_into_an_existing_database
+Unmark_all_entries_before_importing_new_entries_into_an_existing_database=Unmark_all_entries_before_importing_new_entries_into_an_existing_database
